//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package protobuf;

option go_package = "./go_protobuf";

message MulticastMsg {
	repeated NodeInfo nodes    = 1;  // 节点地址列表
    uint64 MsgID               = 2;  // 消息号
    string content             = 3;  // 内容
}

message NodeInfo {
    bytes    Id             = 1 ;     // 节点网络地址
    string   MachineID      = 2 ;     // 设备id
}
